--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 <table border="1" id="table-grid">
 <tr>
-<td><input type="button" value="AC" onclick="vedanta()" id="clear"></td>
+<td><input type="button" value="AC" onclick="refresh()" id="clear"></td>
 <td colspan="3"><input type="text" id="output-display" placeholder="0"></td>
 </tr>
 <tr>
 <td><input type="button" value="+" onclick="display('+')"/> </td>
-<td><input type="button" value="1" onclick="display('1')"/> </td>
-<td><input type="button" value="2" onclick="display('2')"/> </td>
-<td><input type="button" value="3" onclick="display('3')"/> </td>
+<td><input type="button" value="7" onclick="display('1')"/> </td>
+<td><input type="button" value="8" onclick="display('2')"/> </td>
+<td><input type="button" value="9" onclick="display('3')"/> </td>
 </tr>
 <tr>
 <td><input type="button" value="-" onclick="display('-')"/> </td>
@@ -27,9 +27,9 @@
 </tr>
 <tr>
 <td><input type="button" value="*" onclick="display('*')"/> </td>
-<td><input type="button" value="7" onclick="display('7')"/> </td>
-<td><input type="button" value="8" onclick="display('8')"/> </td>
-<td><input type="button" value="9" onclick="display('9')"/> </td>
+<td><input type="button" value="1" onclick="display('7')"/> </td>
+<td><input type="button" value="2" onclick="display('8')"/> </td>
+<td><input type="button" value="3" onclick="display('9')"/> </td>
 </tr>
 <tr>
 <td><input type="button" value="÷" onclick="display('/')"/> </td>
